# WebServer

./: CMakeLists.txt  README.md
include/util/: hash_map.h  linked_list.h  parametric_datastructure_element.h  parametric_list_element.h
src/: main.c
src/uitl/: hash_map.c  linked_list.c  parametric_datastructure_element.c
src/util/: linked_list.c  parametric_list_element.c
